# computational_methods_course

./: .gitignore  README.md  _config.yml  _toc.yml  intro.md  postbuild.sh  pyproject.toml  references.bib  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
assignments/: assignment_01.md
data/: README.md  index.md  moores.csv
extras/: README.md  index.md
homework_nabin/hw-1/: homework_1.ipynb  hw_1.tex
notebooks/: README.md  index.md
notebooks/week_02/: 1_intro_to_xarray.ipynb  2_dask_dashboard_showcase.ipynb
resources/: README.md  index.md
slides/: README.md  index.md
