[project]
name = "computational-methods-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "boto3>=1.42.16",
    "dask>=2026.1.1",
    "distributed>=2026.1.1",
    "eofs>=2.0.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2026.1.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pooch>=1.8.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]
